--- a/css/style.css
+++ b/css/style.css
@@ -322,6 +322,10 @@ width: 100%;
     color:var(--yellow);
 }
 
+.contact .row .content .info .blue:hover{
+    color:#f9ca24;
+    
+}
 .top{
     position: fixed;
     bottom:3.5rem; right: 2rem;
